--- a/etc/mcts_1gpu_notensorrt.conf
+++ b/etc/mcts_1gpu_notensorrt.conf
@@ -8,6 +8,7 @@ eval_batch_size: 4
 eval_wait_batch_timeout_us: 100
 model_config {
     train_dir: "ckpt"
+    meta_graph_path: "leelaz-model-0.meta"
 }
 gpu_list: "0"
 c_puct: 2.5
