--- a/scripts/u2p/CMakeLists.txt
+++ b/scripts/u2p/CMakeLists.txt
@@ -8,5 +8,5 @@ include_directories(${CMAKE_SOURCE_DIR})
 set(CUDA_NVCC_FLAGS --std=c++11)
 set(CMAKE_CXX_STANDARD 11)
 
-add_executable(uff_to_plan uff_to_plan.cpp)
+add_executable(uff_to_plan uff_to_plan.cc)
 target_link_libraries(uff_to_plan nvinfer nvparsers)
