--- a/etc/mcts_1gpu_notensorrt.conf
+++ b/etc/mcts_1gpu_notensorrt.conf
@@ -2,14 +2,13 @@ num_eval_threads: 1
 num_search_threads: 8
 max_children_per_node: 64
 max_search_tree_size: 400000000
-timeout_ms_per_step: 10000
+timeout_ms_per_step: 5000
 max_simulations_per_step: 0
 eval_batch_size: 4
 eval_wait_batch_timeout_us: 100
 model_config {
     train_dir: "ckpt.lz"
-    enable_tensorrt: 1
-    tensorrt_model_path: "leelaz-model-0.PLAN"
+    meta_graph_path: "leelaz-model-0.meta"
 }
 gpu_list: "0"
 c_puct: 2.5
@@ -25,6 +24,12 @@ enable_background_search: 1
 enable_policy_temperature: 0
 policy_temperature: 0.67
 inherit_default_act: 1
+time_control {
+    enable: 1
+    c_denom: 20
+    c_maxply: 250
+    reserved_time: 1.0
+}
 early_stop {
     enable: 1
     check_every_ms: 100
@@ -39,10 +44,4 @@ behind_overtime {
     enable: 1
     act_threshold: 0.0
     time_factor: 0.3
-}
-time_control {
-    enable: 1
-    c_denom: 20
-    c_maxply: 40
-    reserved_time: 1.0
 }
