--- a/etc/mcts_1gpu_notrt_lz.conf
+++ b/etc/mcts_1gpu_notrt_lz.conf
@@ -2,7 +2,7 @@ num_eval_threads: 1
 num_search_threads: 8
 max_children_per_node: 64
 max_search_tree_size: 400000000
-timeout_ms_per_step: 5000
+timeout_ms_per_step: 30000
 max_simulations_per_step: 0
 eval_batch_size: 4
 eval_wait_batch_timeout_us: 100
@@ -10,7 +10,7 @@ model_config {
     train_dir: "ckpt.lz"
     meta_graph_path: "leelaz-model-0.meta"
 }
-gpu_list: "0"
+gpu_list: "0,"
 c_puct: 2.5
 virtual_loss: 1.0
 enable_resign: 1
@@ -24,12 +24,6 @@ enable_background_search: 1
 enable_policy_temperature: 0
 policy_temperature: 0.67
 inherit_default_act: 1
-time_control {
-    enable: 1
-    c_denom: 20
-    c_maxply: 250
-    reserved_time: 1.0
-}
 early_stop {
     enable: 1
     check_every_ms: 100
@@ -44,4 +38,10 @@ behind_overtime {
     enable: 1
     act_threshold: 0.0
     time_factor: 0.3
+}
+time_control {
+    enable: 1
+    c_denom: 20
+    c_maxply: 40
+    reserved_time: 1.0
 }
