--- a/etc/mcts_2gpu_lz.conf
+++ b/etc/mcts_2gpu_lz.conf
@@ -1,8 +1,8 @@
-num_eval_threads: 1
-num_search_threads: 8
+num_eval_threads: 2
+num_search_threads: 12
 max_children_per_node: 64
 max_search_tree_size: 400000000
-timeout_ms_per_step: 10000
+timeout_ms_per_step: 30000
 max_simulations_per_step: 0
 eval_batch_size: 4
 eval_wait_batch_timeout_us: 100
@@ -11,7 +11,7 @@ model_config {
     enable_tensorrt: 1
     tensorrt_model_path: "leelaz-model-0.PLAN"
 }
-gpu_list: "0"
+gpu_list: "0,1,"
 c_puct: 2.5
 virtual_loss: 1.0
 enable_resign: 1
