--- a/etc/mcts_2gpu_notrt_elf.conf
+++ b/etc/mcts_2gpu_notrt_elf.conf
@@ -1,5 +1,5 @@
-num_eval_threads: 5
-num_search_threads: 24
+num_eval_threads: 2
+num_search_threads: 12
 max_children_per_node: 64
 max_search_tree_size: 400000000
 timeout_ms_per_step: 30000
@@ -7,9 +7,10 @@ max_simulations_per_step: 0
 eval_batch_size: 4
 eval_wait_batch_timeout_us: 100
 model_config {
-    train_dir: "ckpt"
+    train_dir: "ckpt.elf"
+    meta_graph_path: "leelaz-elf-0.meta"
 }
-gpu_list: "0,1,2,3,4"
+gpu_list: "0,1,"
 c_puct: 2.5
 virtual_loss: 1.0
 enable_resign: 1
