--- a/etc/mcts_4gpu_elf.conf
+++ b/etc/mcts_4gpu_elf.conf
@@ -1,5 +1,5 @@
-num_eval_threads: 7
-num_search_threads: 32
+num_eval_threads: 4
+num_search_threads: 20
 max_children_per_node: 64
 max_search_tree_size: 400000000
 timeout_ms_per_step: 30000
@@ -7,11 +7,11 @@ max_simulations_per_step: 0
 eval_batch_size: 4
 eval_wait_batch_timeout_us: 100
 model_config {
-    train_dir: "ckpt"
+    train_dir: "ckpt.elf"
     enable_tensorrt: 1
-    tensorrt_model_path: "zero.ckpt-20b-v1.FP32.PLAN"
+    tensorrt_model_path: "leelaz-elf-0.PLAN"
 }
-gpu_list: "0,1,2,3,4,5,6"
+gpu_list: "0,1,2,3,"
 c_puct: 2.5
 virtual_loss: 1.0
 enable_resign: 1
