--- a/etc/mcts_2gpu_elf.conf
+++ b/etc/mcts_2gpu_elf.conf
@@ -10,6 +10,7 @@ model_config {
     train_dir: "ckpt.elf"
     enable_tensorrt: 1
     tensorrt_model_path: "leelaz-elf-0.PLAN"
+    value_from_black: 1
 }
 gpu_list: "0,1,"
 c_puct: 2.5
