--- a/etc/mcts_4gpu_notrt_elf.conf
+++ b/etc/mcts_4gpu_notrt_elf.conf
@@ -9,6 +9,7 @@ eval_wait_batch_timeout_us: 100
 model_config {
     train_dir: "ckpt.elf"
     meta_graph_path: "leelaz-elf-0.meta"
+    value_from_black: 1
 }
 gpu_list: "0,1,2,3,"
 c_puct: 2.5
