--- a/.travis.yml
+++ b/.travis.yml
@@ -2,11 +2,11 @@ dist: trusty
 sudo: required
 
 before_install:
-    - wget https://github.com/bazelbuild/bazel/releases/download/0.11.1/bazel-0.11.1-installer-linux-x86_64.sh
-    - chmod +x bazel-0.11.1-installer-linux-x86_64.sh
-    - ./bazel-0.11.1-installer-linux-x86_64.sh --user
+    - wget https://github.com/bazelbuild/bazel/releases/download/0.19.2/bazel-0.19.2-installer-linux-x86_64.sh
+    - chmod +x bazel-0.19.2-installer-linux-x86_64.sh
+    - ./bazel-0.19.2-installer-linux-x86_64.sh --user
     - export PATH="$PATH:$HOME/bin"
 
 script:
-    - bazel build //mcts:mcts_main
-    - bazel build //dist:dist_zero_model_server
+    - bazel build --define=grpc_no_ares=true //mcts:mcts_main
+    - bazel build --define=grpc_no_ares=true //dist:dist_zero_model_server
